--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -85,6 +85,10 @@ body {
 		padding-bottom: px2rem(20);
 	}
 
+	#ubc7-unit-menu {
+		z-index: 2;
+	}
+
 	.navbar .btn-navbar, .btn {
 		margin: 0 px2rem(20) 0 0;
 		box-shadow: unset;
